--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,4 +27,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm install
-    - run: ($env:CI = "true") (npm run test)
+    - name: Run Tests
+      run: |
+        export CI=true
+        npm run test
