--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,3 +28,5 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: CI=true npm run test
+    - name: Run WebDriverIO tests
+      run: npx wdio run ./wdio.conf.js
