--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@wdio/local-runner": "^8.10.7",
     "@wdio/selenium-standalone-service": "^8.10.7",
     "@wdio/spec-reporter": "^8.10.6",
+    "@wdio/static-server-service": "^8.11.0",
     "axios": "^1.4.0",
     "axios-mock-adapter": "^1.21.4",
     "babel-jest": "^29.5.0",
