--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "babel-jest": "^29.5.0",
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
+    "chromedriver": "^114.0.2",
     "fs": "^0.0.1-security",
     "jest": "^27.5.1",
     "mocha": "^10.2.0",
