--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "wdio-chromedriver-service": "^8.1.1",
     "web-vitals": "^2.1.4",
     "webdriverio": "^8.10.7"
   },
