--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
 
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
@@ -29,4 +29,6 @@ jobs:
     - run: npm install
     - run: CI=true npm run test
     - name: Run WebDriverIO tests
-      run: npx wdio run ./wdio.conf.js
+      run: |
+        echo "Running WebDriverIO tests"
+        npx wdio run ./wdio.conf.js
