--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,13 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm install
+    - name: Build
+      run: npm run build
     - run: CI=true npm run test
+    - name: Start server
+      run: npm run start-back
+    - name: Wait for server to start
+      run: sleep 5
     - name: Run WebDriverIO tests
       run: |
         echo "Running WebDriverIO tests"
