--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,7 +31,7 @@ jobs:
       run: npm run build
     - run: CI=true npm run test
     - name: Start server
-      run: npm run start-back
+      run: node server.js
     - name: Wait for server to start
       run: sleep 5
     - name: Run WebDriverIO tests
