--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,3 +34,5 @@ jobs:
       run: |
         echo "Running WebDriverIO tests"
         npx wdio run ./wdio.conf.js
+    - name: Run Playwright tests
+      run: npm run playwright:test
