--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,3 +36,5 @@ jobs:
         npx wdio run ./wdio.conf.js
     - name: Run Playwright tests
       run: npm run playwright:test
+    - name: Run robot tests
+      run: npm run robot:test
