--- a/package.json
+++ b/package.json
@@ -67,9 +67,6 @@
     "path": "^0.12.7",
     "playwright": "^1.35.0",
     "react-test-renderer": "^18.2.0",
-    "wdio-edgedriver-service": "^3.0.2",
-    "robotframework": "^4.1.2",
-    "robotframework-seleniumlibrary": "^5.1.3",
-    "selenium-webdriver": "^4.9.0"
+    "wdio-edgedriver-service": "^3.0.2"
   }
 }
