--- a/.github/workflows/playwright-shard.yml
+++ b/.github/workflows/playwright-shard.yml
@@ -67,11 +67,4 @@ jobs:
           key: playwright-${{ hashFiles('package-lock.json') }}
 
       - name: Run Playwright tests
-        run: npx playwright test playwright/specs/playwright-fixtures.test.js --shard=${{ matrix.shard }}/${{ strategy.job-total }}
-
-      - uses: actions/upload-artifact@v3
-        if: always()
-        with:
-          name: playwright-report-${{ matrix.shard }}_${{ strategy.job-total }}
-          path: playwright-report
-          retention-days: 30
+        run: npm run playwright:test
