--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "test": "react-scripts test --coverage --detectOpenHandles",
     "eject": "react-scripts eject",
     "wdio": "wdio run ./wdio.conf.js",
-    "playwright:test": "npx playwright test playwright --shard=${{ matrix.shard }}/${{ strategy.job-total }}",
+    "playwright:test": "npx playwright test playwright",
     "robot:test": "robot -d results robot/test_one.robot"
-    },
+  },
   "eslintConfig": {
     "extends": [
       "react-app"
