--- a/.github/workflows/playwright-shard.yml
+++ b/.github/workflows/playwright-shard.yml
@@ -69,3 +69,10 @@ jobs:
 
       - name: Run Playwright tests
         run: npx playwright test playwright\specs\playwright-fixtures.test.js --reporter=list --shard=${{ matrix.shard }}/${{ strategy.job-total }}
+      
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+            name: playwright-report-${{ matrix.shard }}_${{ strategy.job-total }}
+            path: playwright-report
+            retention-days: 30
