--- a/.github/workflows/playwright-shard.yml
+++ b/.github/workflows/playwright-shard.yml
@@ -32,10 +32,12 @@ jobs:
           key: playwright-${{ hashFiles('package-lock.json') }}
 
       - name: Install dependencies
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
         run: npm install
       - name: Build
         run: npm run build
       - name: Install Playwright Browsers
+        if: steps.cache-playwright.outputs.cache-hit != 'true'
         run: npx playwright install --with-deps
 
   test:
@@ -72,5 +74,5 @@ jobs:
         if: always()
         with:
             name: playwright-report-${{ matrix.shard }}_${{ strategy.job-total }}
-            path: playwright-report
+            path: playwright/specs/test-results/
             retention-days: 30
