--- a/.github/workflows/playwright-shard.yml
+++ b/.github/workflows/playwright-shard.yml
@@ -39,12 +39,22 @@ jobs:
         run: npx playwright install --with-deps
 
   build:
+    timeout-minutes: 60
     name: 🏗️ Build
     needs: install
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Build
+    - uses: actions/setup-node@v3
+    - name: Cache build
+      uses: actions/cache@v3
+      id: cache-build
+      with:
+        path: |
+          build
+        key: modules-${{ hashFiles('package-lock.json') }}
+    - name: Build the project
+      if: steps.cache-build.outputs.cache-hit != 'true'
       run: npm run build
 
   test:
