--- a/.github/workflows/playwright-shard.yml
+++ b/.github/workflows/playwright-shard.yml
@@ -66,6 +66,14 @@ jobs:
             node_modules
           key: modules-${{ hashFiles('package-lock.json') }}
 
+      - name: Cache build
+        uses: actions/cache@v3
+        id: cache-build
+        with:
+              path: |
+                build
+              key: build-${{ hashFiles('package-lock.json') }}
+
       - name: Cache Playwright
         uses: actions/cache@v3
         with:
